@@ -29,6 +29,7 @@
 #ifndef STRICT
 #define STRICT
 #endif
+#define WIN32_LEAN_AND_MEAN
 #include <windows.h>
 #endif
 #ifdef HAVE_GL_H
